fix(search-tips): Increase z-index value

--- a/src/components/ui/ImageLink/ImageLink.module.css
+++ b/src/components/ui/ImageLink/ImageLink.module.css
@@ -29,7 +29,7 @@
 	top: 32px;
 	right: 32px;
 	width: 250px;
-	z-index: 1000;
+	z-index: 10;
 }
 
 @media (max-width: 1370px) {
