--- a/src/layout/Header/SearchTips/SearchTips.module.css
+++ b/src/layout/Header/SearchTips/SearchTips.module.css
@@ -8,7 +8,7 @@
 	border-radius: 16px;
 	padding: 16px 0;
 	background-color: #fff;
-	z-index: 10;
+	z-index: 1000;
 }
 
 .tip {
